# cloud-native-benchmarks

./: README.md  pyproject.toml  tox.ini
.github/workflows/: release-drafter.yml
benchmarks/document/: defaults.yml  ycsb-commerce-rediscloud-redisjson-25primaries-load-1Mdocs.yml  ycsb-commerce-rediscloud-redisjson-25primaries-load.yml  ycsb-commerce-rediscloud-redisjson-load.yml
cloud_native_benchmarks/: __init__.py
cloud_native_benchmarks/dbwrappers/: RedisVanilla.py
cloud_native_benchmarks/inventory/: __init__.py  client_terraform.py  common.py  config.py  init_redis.py
cloud_native_benchmarks/runner/: args.py  cli.py  log.py  poetry.py  specs.py  ssh.py  ycsb.py
tests/: __init__.py  test_client_terraform.py  test_cloud_native_benchmarks.py  test_config.py  test_specs.py
tests/test_data/: ycsb-commerce-rediscloud-redisjson-25primaries-load.yml
